fix: stabilize batch job recommendations